@@ -234,7 +234,7 @@ gnulib_modules="
   strtod
   strtoimax
   strtoumax
-  symlink
+  symlinkat
   sys_ioctl
   sys_resource
   sys_stat
